@@ -697,6 +697,22 @@ which is, as expected, exactly what we would have computed for the original line
 
 </example>
 
+<p>In <acroref type="example" acro="IVSAV" /> we avoided a computation in $P_3$ by a conversion of the computation to a new vector space, $M_{22}$, via an invertible linear transformation (also known as an isomorphism).  Here is a diagram meant to to illustrate the more general situation of two vector spaces, $U$ and $V$, and an invertible linear transformation, $T$.  The diagram is simply about a sum of two vectors from $U$, rather than a more involved linear combination.  It should remind you of <acroref type="diagram" acro="DLTA" />.
+<diagram acro="AIVS">
+<title>Addition in Isomorphic Vector Spaces</title>
+<tikz>
+\matrix (m) [matrix of math nodes, row sep=5em, column sep=10em, text height=1.5ex, text depth=0.25ex]
+<![CDATA[{ \vect{u}_1,\,\vect{u}_2 & T(\vect{u}_1),\,T(\vect{u}_2) \\]]>
+<![CDATA[\vect{u}_1+\vect{u}_2 & T(\vect{u}_1+\vect{u}_2)=T(\vect{u}_1)+T(\vect{u}_2)\\};]]>
+\path[->]
+(m-1-1) edge[thick] node[auto] {$T$}             (m-1-2)
+(m-1-2) edge[thick] node[auto] {$+$}             (m-2-2)
+(m-1-1) edge[thick] node[auto] {$+$}             (m-2-1)
+(m-2-2) edge[thick] node[auto] {$\ltinverse{T}$} (m-2-1);
+</tikz>
+</diagram>
+To understand this diagram, begin in the upper-left corner, and by going straight down we can compute the sum of the two vectors using the addition for the vector space $U$.  The more circuitous alternative, in the spirit of <acroref type="example" acro="IVSAV" />, is to begin in the upper-left corner and then proceed clockwise around the other three sides of the rectangle.  Notice that the vector addition is accomplished using the addition in the vector space $V$.  Then, because $T$ is a linear transformation, we can say that the result of $\lt{T}{\vect{u}_1}+\lt{T}{\vect{u}_2}$ is  equal to $\lt{T}{\vect{u}_1+\vect{u}_2}$.  Then the key feature is to recognize that applying $\ltinverse{T}$ obviously converts the second version of this result into the sum in the lower-left corner.  So there are two routes to the sum $\vect{u}_1+\vect{u}_2$, each employing an addition from a different vector space, but one is <q>direct</q> and trhe other is <q>roundabout</q>.  You might try designing a similar diagram for the case of scalar multiplication (see <acroref type="diagram" acro="DLTM" />) or for a full linear combination.</p>
+
 <p>Checking the dimensions of two vector spaces can be a quick way to establish that they are not isomorphic.  Here's the theorem.</p>
 
 <theorem acro="IVSED" index="isomorphic vector spaces!dimension">
